mon-deuxieme-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
    tiers: devops
spec: 
  selector:
    matchLabels:
      app: hello-world
  replicas: 3
  template:
    metadata:
      labels:
       app: hello-world
    spec:
      containers: 
      - name: hello-world
        image: dockercloud/hello-world
        ports: 
          - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
