mon-troisieme-pod.yaml
kind: Service
apiVersion: v1
metadata: 
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
