service-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-redis
spec: 
  selector:
    app: redis-devops303
  ports:
    - protocol: TCP
      port: 6379 
      targetPort: 6379
